# nadi-admin-website-frontend

./: .env.example  README.md  TESTING.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  main.py  page.tsx
app/anc-analytics/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
backend/app/api/v1/routes/: admin.py  auth_admin.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  base_enums.py  encounter.py  patient.py
backend/app/schemas/: fhsis.py
backend/keys/: README.md  jwt_admin_private.pem  jwt_admin_public.pem  jwt_mobile_public.pem
components/: anc-charts.tsx  anc-coverage-alert.tsx  anc-intervention-flags.tsx  anc-kpi-cards.tsx  anc-regional-rankings.tsx  anc-tabs.tsx  app-guard.tsx  bhw-alert.tsx  bhw-content.tsx  bhw-kpi.tsx  bhw-tabs.tsx  charts.tsx  cohort-content.tsx  cohort-filters.tsx  cohort-sidebar.tsx  danger-sign-alert.tsx  danger-sign-charts.tsx  danger-sign-kpi.tsx  danger-sign-sidebar.tsx  danger-sign-tabs.tsx  export-alert.tsx  export-config.tsx  export-sidebar.tsx  fhsis-alert.tsx  fhsis-charts.tsx  fhsis-facility-table.tsx  fhsis-kpi.tsx  fhsis-sidebar.tsx  fhsis-tabs.tsx  footer.tsx  gis-analytics.tsx  gis-kpi-cards.tsx  gis-map-area.tsx  gis-map-controls.tsx  header.tsx  kpi-cards.tsx  node-charts.tsx  node-health-alert.tsx  node-kpi.tsx  node-sidebar.tsx  (+14 more)
lib/: analytics-adapters.ts  api.ts  auth.tsx  mock-data.ts  use-api.ts
(+17 files in other folders)
